PROJECT(DACE)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
AUX_SOURCE_DIRECTORY(src DIR_SRCS)
ADD_EXECUTABLE(dace ${DIR_SRCS})
FIND_PACKAGE(MPI REQUIRED)
FIND_PACKAGE(Threads REQUIRED)
set(CMAKE_BUILD_TYPE Release)
set(EXECUTABLE_OUTPUT_PATH "bin")
# SET(CMAKE_CXX_COMPILE_FLAGS ${CMAKE_CXX_COMPILE_FLAGS} ${MPI_COMPILE_FLAGS})
# SET(CMAKE_CXX_LINK_FLAGS ${CMAKE_CXX_LINK_FLAGS} ${MPI_LINK_FLAGS})
INCLUDE_DIRECTORIES(${MPI_C_INCLUDE_PATH})
TARGET_LINK_LIBRARIES(dace ${MPI_LIBRARIES})
TARGET_LINK_LIBRARIES(dace ${CMAKE_THREAD_LIBS_INIT})
